@@ -1167,6 +1167,7 @@ class IMP_Ajax_Application extends Horde_Core_Ajax_Application
             list($imp_compose, $imp_contents) = $this->_initCompose();
 
             $fwd_map = array(
+                'editasnew' => IMP_Compose::EDITASNEW,
                 'forward_attach' => IMP_Compose::FORWARD_ATTACH,
                 'forward_auto' => IMP_Compose::FORWARD_AUTO,
                 'forward_body' => IMP_Compose::FORWARD_BODY,
